--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-  
+
 cache:
   directories:
     - $HOME/.gradle/caches/3.4.1
@@ -16,4 +16,4 @@ jdk:
   - oraclejdk8
 
 script:
-  - ./gradlew clean check --continue --stacktrace
+  - clean check --continue --stacktrace
