checkstyle and travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ jdk:
   - oraclejdk8
 
 script:
-  - "./gradlew clean check --continue --stacktrace"
+  - ./gradlew clean check --continue --stacktrace
