--- a/quality/detekt.yml
+++ b/quality/detekt.yml
@@ -96,16 +96,51 @@ style:
   active: true
   WildcardImport:
     active: true
+  ModifierOrder:
+    active: true
+  PackageNaming:
+    active: true
+    packagePattern: '^[a-z]+(\.[a-z][a-z0-9]*)*$'
+  ClassNaming:
+    active: true
+    classPattern: '[A-Z$][a-zA-Z$]*'
+  EnumNaming:
+    active: true
+    enumEntryPattern: '^[A-Z$][a-zA-Z_$]*$'
+  FunctionNaming :
+    active: true
+    functionPattern: '^[a-z$][a-zA-Z$0-9]*$'
+  FunctionMaxLength:
+    active: false
+    maximumFunctionNameLength: 25
+  FunctionMinLength:
+    active: false
+    minimumFunctionNameLength: 3
+  VariableNaming :
+    active: true
+    variablePattern: '^(_)?[a-z$][a-zA-Z$0-9]*$'
+  ConstantNaming :
+    active: true
+    constantPattern: '^([A-Z_]*|serialVersionUID)$'
+  VariableMaxLength:
+    active: false
+    maximumVariableNameLength: 17
+  VariableMinLength:
+    active: false
+    minimumVariableNameLength: 3
   MaxLineLength:
     active: true
     maxLineLength: 116
-  NamingConventionViolation:
+    excludePackageStatements: false
+    excludeImportStatements: false
+  UnnecessaryParentheses:
     active: true
-    variablePattern: '^(_)?[a-z$][a-zA-Z$0-9]*$'
-    constantPattern: '^([A-Z_]*|serialVersionUID)$'
-    methodPattern: '^[a-z$][a-zA-Z$0-9]*$'
-    classPattern: '[A-Z$][a-zA-Z$]*'
-    enumEntryPattern: '^[A-Z$][a-zA-Z_$]*$'
+  ReturnCount:
+    active: false
+  OptionalWhenBraces:
+    active: false
+  MagicNumber:
+    active: false
 
 comments:
   active: true
@@ -116,6 +151,10 @@ comments:
   NoDocOverPublicClass:
     active: false
   NoDocOverPublicMethod:
+    active: false
+  UndocumentedPublicFunction:
+    active: false
+  UndocumentedPublicClass:
     active: false
 
 # *experimental feature*
